--- a/src/NServiceBus.Persistence.NonDurable/NServiceBus.Persistence.NonDurable.csproj
+++ b/src/NServiceBus.Persistence.NonDurable/NServiceBus.Persistence.NonDurable.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net472;netstandard2.0</TargetFrameworks>
+    <RootNamespace>NServiceBus.Storage.InMemory</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
