--- a/src/NServiceBus.Persistence.NonDurable.Tests/NServiceBus.Persistence.NonDurable.Tests.csproj
+++ b/src/NServiceBus.Persistence.NonDurable.Tests/NServiceBus.Persistence.NonDurable.Tests.csproj
@@ -18,6 +18,8 @@
         <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Particular.CodeRules" Version="0.3.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+        <PackageReference Include="Particular.Approvals" Version="0.2.0" />
+        <PackageReference Include="PublicApiGenerator" Version="9.3.0" />
     </ItemGroup>
 
     <ItemGroup>
