Remove timeout persistence.

--- a/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
+++ b/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
@@ -21,7 +21,7 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="Particular.CodeRules" Version="0.7.0" />
-    <PackageReference Include="NServiceBus.PersistenceTests.Sources" Version="8.0.0-alpha.630" />
+    <PackageReference Include="NServiceBus.PersistenceTests.Sources" Version="8.0.0-PullRequest5807.*" />
   </ItemGroup>
 
   <ItemGroup>
