Enable assembly scanning to find persistence types

--- a/src/NServiceBus.Persistence.NonDurable.AcceptanceTests/NServiceBus.Persistence.NonDurable.AcceptanceTests.csproj
+++ b/src/NServiceBus.Persistence.NonDurable.AcceptanceTests/NServiceBus.Persistence.NonDurable.AcceptanceTests.csproj
@@ -23,4 +23,8 @@
     <Compile Include="../NServiceBus.AcceptanceTests/**/*.cs" Exclude="../NServiceBus.AcceptanceTests/obj/**/*.*"></Compile>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="\**\EndpointTemplates\EndpointCustomizationConfigurationExtensions.cs" />
+  </ItemGroup>
+
 </Project>
