--- a/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
+++ b/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Compile Include="../NServiceBus.PersistenceTesting/**/*.cs" Exclude="../NServiceBus.PersistenceTesting/obj/**/*.*"></Compile>
+    <Compile Remove="$(PkgNServiceBus_PersistenceTests_Sources)/**/DeepCopy.cs"/>
   </ItemGroup>
 
 </Project>
