Another version of remove to see if that one works on actions

--- a/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
+++ b/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <Compile Include="../NServiceBus.PersistenceTesting/**/*.cs" Exclude="../NServiceBus.PersistenceTesting/obj/**/*.*"></Compile>
-    <Compile Remove="$(PkgNServiceBus_PersistenceTests_Sources)/**/DeepCopy.cs"/>
+    <Compile Remove="\**\DeepCopy.cs"/> <!--To make the build green on Windows-->
   </ItemGroup>
 
 </Project>
