Another exclude attempt

--- a/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
+++ b/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="../NServiceBus.PersistenceTesting/**/*.cs" Exclude="../NServiceBus.PersistenceTesting/obj/**/*.*"></Compile>
-    <Compile Remove="\**\DeepCopy.cs"/> <!--To make the build green on Windows-->
+    <Compile Include="../NServiceBus.PersistenceTesting/**/*.cs" Exclude="../NServiceBus.PersistenceTesting/obj/**/*.*" ></Compile>
+    <Compile Remove="$(PkgNServiceBus_PersistenceTests_Sources)/**/DeepCopy.cs"/> <!--To make the build green on Windows-->
   </ItemGroup>
 
 </Project>
