--- a/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
+++ b/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="../NServiceBus.PersistenceTesting/**/*.cs" Exclude="../NServiceBus.PersistenceTesting/obj/**/*.*" ></Compile>
+    <Compile Include="../NServiceBus.PersistenceTesting/**/*.cs" Exclude="../NServiceBus.PersistenceTesting/obj/**/*.*" />
   </ItemGroup>
 
 </Project>
