--- a/src/NServiceBus.Persistence.NonDurable.AcceptanceTests/NServiceBus.Persistence.NonDurable.AcceptanceTests.csproj
+++ b/src/NServiceBus.Persistence.NonDurable.AcceptanceTests/NServiceBus.Persistence.NonDurable.AcceptanceTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net472;netcoreapp3.1;net6.0</TargetFrameworks>
+    <TargetFrameworks>net472;net6.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NServiceBus.AcceptanceTests.Sources" Version="8.0.0-storagession.2" />
+    <PackageReference Include="NServiceBus.AcceptanceTests.Sources" Version="8.0.0-beta.2" />
   </ItemGroup>
 
   <ItemGroup>
