--- a/src/NServiceBus.Persistence.NonDurable/NServiceBus.Persistence.NonDurable.csproj
+++ b/src/NServiceBus.Persistence.NonDurable/NServiceBus.Persistence.NonDurable.csproj
@@ -1,17 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net472;net6.0</TargetFrameworks>
+    <TargetFramework>net8.0</TargetFramework>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>$(SolutionDir)NServiceBus.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup Label="Public dependencies">
-    <PackageReference Include="NServiceBus" Version="[8.0.0, 9)" />
+    <PackageReference Include="NServiceBus" Version="9.0.0-alpha.1" />
   </ItemGroup>
 
   <ItemGroup Label="Private dependencies">
     <PackageReference Include="Particular.Packaging" Version="3.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="NServiceBus.Persistence.NonDurable.PersistenceTests" Key="$(NServiceBusTestsKey)" />
+    <InternalsVisibleTo Include="NServiceBus.Persistence.NonDurable.Tests" Key="$(NServiceBusTestsKey)" />
   </ItemGroup>
 
 </Project>
