--- a/src/NServiceBus.Persistence.NonDurable/NServiceBus.Persistence.NonDurable.csproj
+++ b/src/NServiceBus.Persistence.NonDurable/NServiceBus.Persistence.NonDurable.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup Label="Public dependencies">
-    <PackageReference Include="NServiceBus" Version="[9.0.0, 10.0.0)" />
+    <PackageReference Include="NServiceBus" Version="9.1.2" />
   </ItemGroup>
 
   <ItemGroup Label="Private dependencies">
