--- a/src/NServiceBus.Persistence.NonDurable/NServiceBus.Persistence.NonDurable.csproj
+++ b/src/NServiceBus.Persistence.NonDurable/NServiceBus.Persistence.NonDurable.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup Label="Public dependencies">
-    <PackageReference Include="NServiceBus" Version="[8.0.0, 9)" />
+    <PackageReference Include="NServiceBus" Version="8.2.4" />
   </ItemGroup>
 
   <ItemGroup Label="Private dependencies">
