--- a/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
+++ b/src/NServiceBus.Persistence.NonDurable.PersistenceTests/NServiceBus.Persistence.NonDurable.PersistenceTests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NServiceBus.PersistenceTests.Sources" Version="9.2.3" />
+    <PackageReference Include="NServiceBus.PersistenceTests.Sources" Version="10.0.0-alpha.1" />
   </ItemGroup>
 
 </Project>
