--- a/src/Custom.Build.props
+++ b/src/Custom.Build.props
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <MinVerMinimumMajorMinor>3.0</MinVerMinimumMajorMinor>
     <MinVerAutoIncrement>minor</MinVerAutoIncrement>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
 </Project>
