--- a/src/NServiceBus.Persistence.NonDurable.AcceptanceTests/NServiceBus.Persistence.NonDurable.AcceptanceTests.csproj
+++ b/src/NServiceBus.Persistence.NonDurable.AcceptanceTests/NServiceBus.Persistence.NonDurable.AcceptanceTests.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
-    <WarningsNotAsErrors>CS0618</WarningsNotAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,12 +11,13 @@
   <ItemGroup>
     <PackageReference Include="GitHubActionsTestLogger" Version="2.4.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="NUnit" Version="3.14.0" />
+    <PackageReference Include="NUnit" Version="4.4.0" />
+    <PackageReference Include="NUnit.Analyzers" Version="4.11.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NServiceBus.AcceptanceTests.Sources" Version="9.1.2" />
+    <PackageReference Include="NServiceBus.AcceptanceTests.Sources" Version="9.2.8" />
   </ItemGroup>
 
 </Project>
